# under_farm

./: .gitignore  Cargo.toml  build.sh
.cargo/: config.toml
assets/config/: crops.json  crops.kdl  floors.kdl  game.kdl  player.kdl  structures.kdl  tools.kdl  world.kdl
assets/maps/: cave_1.tmx
assets/room_templates/four_by_four/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt
assets/room_templates/four_by_four_broken/: 1.txt
assets/room_templates/four_by_four_rubble_1/: 1.txt
assets/room_templates/l_shaped/: 01.txt  02.txt  03.txt
assets/sprites/: palette.aseprite
src/: app_state.rs  components.rs  configuration.rs  game_state.rs  main.rs  plugins.rs  sprite_handles.rs  sprites.rs  states.rs  systems.rs  world.rs  world_generation.rs
src/components/: action.rs  body.rs  bounding_box.rs  cameras.rs  crop.rs  damage.rs  grid.rs  ground.rs  health.rs  inventory.rs  item.rs  map.rs  movement.rs  name.rs  player.rs  player_name.rs  spawns.rs  speed.rs  structure.rs  text.rs  tile.rs  tool.rs  wall.rs  world.rs
src/configuration/: crops.rs  floors.rs  game.rs  kdl_utils.rs  key_selector.rs  load.rs  map.rs  player.rs  sprites.rs  structures.rs  timers.rs  tools.rs  world.rs
src/plugins/: inventory.rs  world.rs
src/systems/: actions.rs  cameras.rs  crops.rs  initial_spawns.rs  inputs.rs  inventory.rs  loading.rs  movement.rs  player_movement.rs  spawns.rs  textures.rs  world.rs
src/world_generation/: cell.rs  coordinate.rs  generation.rs  grid.rs  rooms.rs  templates.rs
(+49 files in other folders)
