[package]
name = "under_farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "601cc0cbe3dc73c0db1993184f4ec47783e83884" }
kdl = "3.0.0"
rand = "0.8.4"
walkdir = "2.3.2"
tdlg = "0.1.2"
