[package]
name = "under_farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "a1e3c5c1001b06d23195cd94c8ae7b524c992c4c" }
kdl = "3.0.0"
rand = "0.8.4"
walkdir = "2.3.2"
tdlg = "0.1.2"
